<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp"
        >
        <TextView
            android:id="@+id/firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/firstname"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/lastname"
            android:textSize="24sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_edittext"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:gravity="center"

        >
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="8dp"
            android:text="@string/email" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"
            android:clickable="false"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/mobilephone1_layout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_edittext"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp"
        >
    <TextView
        android:id="@+id/mobilephone1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/mobilephone1"
        android:gravity="center"
        android:clickable="false"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobilephone2_layout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_edittext"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp"
        >
    <TextView
        android:id="@+id/mobilephone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/mobilephone2"
        android:clickable="false"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:clickable="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/officephone_layout"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_edittext"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp"

        >
    <TextView
        android:id="@+id/officephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/officephone"
        android:clickable="false"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:clickable="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noti"
        android:background="@color/orange"
        android:textColor="@color/white"
        android:layout_margin="4dp"
        android:padding="4dp"

        />


</LinearLayout>